# gatetrack-sentinel-kaggle

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  RC2_3_8_REBUILD_REPORT.md  RC2_3_8_VERIFICATION_REPORT.txt  README.md  SECURITY.md  docker-compose.yml  install_rc2_3_8.ps1  pyproject.toml  repo_manifest.sha256  requirements-adk.txt  requirements-dev.txt  requirements.txt  run_rc2_3_8.ps1
.github/workflows/: ci.yml
adk_agents/gatetrack_sentinel/: README.md  agent.py
backend/: config.py  main.py  version.py
backend/api/: router.py
backend/policies/: repository.py
backend/rules/: risk.py  (+2 more)
data/: baseline_evaluation_summary.json  evaluation_cases.json  synthetic_visitors.json
docs/: IP_BOUNDARY.md  QUICKSTART_WINDOWS.md  architecture.md  baseline-evaluation-report.md  course-concepts.md  evaluation.md  limitations.md  security.md
frontend/: index.html  package-lock.json  package.json
gatetrack_sentinel_kaggle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_server/: README.md  policy_tools.py  server.py
runtime/: gatetrack_sentinel.db
scripts/: check_agent_readiness.py  launch_windows.ps1  run_agent_evaluation.py  run_dev.ps1  run_dev.sh  run_evaluation.py  seed_demo_data.py  verify_proof_packet.py  verify_release.py
specs/: acceptance-criteria.md  product-spec.md  security-spec.md  workflow-spec.md
tests/: conftest.py  test_api.py  test_evaluation.py  test_mcp_tools.py  test_phase4_agent.py  test_policy.py  test_routing.py  test_security.py  test_validation.py  test_workflow.py
(+33 files in other folders)
