[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatetrack-sentinel-kaggle"
version = "0.3.4"
description = "Human-governed visitor risk triage capstone starter repository."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "AUREX Sentinel Labs"}
]
dependencies = [
  "fastapi>=0.133,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.12,<3",
  "python-dotenv>=1.0,<2",
  "httpx>=0.28,<1"
]

[project.optional-dependencies]
adk = [
  "google-adk>=2.3,<2.4",
  "mcp>=1.28,<1.29",
  "google-genai>=2.10,<2.11"
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "mcp_server*", "adk_agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
